--- a/style.css
+++ b/style.css
@@ -1,7 +1,92 @@
 /*
-Color Palette:
-background color:  
-font color:        
-secondary color:   
-tertiary color:    
+Color Palette: 
+background color: #999B84
+font color: #F4EEED 
+secondary color: #EFD9D1
+tertiary color: #D8AC9C 
 */
+
+/* CSS syntax notes:
+        selector {property: value;}
+*/
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;1,300&display=swap');
+
+
+html {
+    font-size: 62.5%;        /*Default font size is 16px - 62.5% of 16 is 10px-
+                                1 rem (relative unit) now will be equivalent to 10px} */
+}
+
+header{
+    margin: 0 4rem;
+    letter-spacing: 0.8rem;
+    text-align: center;
+    border-bottom: 1px solid #FAF3E0;
+    border-right: 1px solid #FAF3E0;
+    border-left: 1px solid #FAF3E0;
+    padding: 0.5rem;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
+    text-transform: uppercase;
+    font-size: 1.1rem;
+}
+
+body {
+    background-color:#999B84;
+    color: #F4EEED;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+}
+
+cite {
+    font-size: 2rem;
+}
+
+p {
+    font-size: 1.2rem;
+}
+
+.imageCard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 7rem 4rem;
+}
+
+.imageCard img {
+    width: 100%;
+    height: auto;
+    border-radius: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.imageCard a{
+    text-decoration: none;
+    color: #D8AC9C;
+}
+
+.cardText {
+    color: #EFD9D1;
+    text-align: center;
+    padding: 2rem;
+    border-radius: 30px;
+    margin-top: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+@media (min-width: 768px) {
+    header {
+        font-size: 1.6rem;
+    }
+    
+    .gallery{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+    
+    .imageCard {
+        max-width: 27%;
+    }
+}
